# shenlong

./: .all-contributorsrc  .codecov.yml  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  crates.js  fib0.json  help.html  index.html  search-index.js  settings.html  shenlongup  sierra.md  source-files.js
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: bench.yaml  bench.yml  fuzzing.yaml  pr_bench.yaml  pr_bench.yml  rustdoc.yml  test.yml
benches/: bytecode_exec.rs  execution.rs  llvm_execution.rs  sierra_2_llvm_benchmark.rs
cli/: Cargo.toml
cli/src/: cli.rs  emoji.rs  lib.rs  main.rs  runner.rs
core/: Cargo.toml  sidebar-items.js
core/src/: lib.rs  main.rs
core/src/sierra/: debug.rs  errors.rs  llvm_compiler.rs  mod.rs
core/src/sierra/corelib_functions/: mod.rs  processor.rs
core/src/sierra/corelib_functions/array/: append.rs  mod.rs  new.rs  push.rs
core/src/sierra/corelib_functions/boxes/: into_box.rs  mod.rs  unbox.rs
core/src/sierra/corelib_functions/enums/: enum_init.rs  mod.rs
core/src/sierra/corelib_functions/functions/: function_call.rs  mod.rs
core/src/sierra/corelib_functions/math/: add.rs  constants.rs  div.py  div.rs  mod.rs  modulo.rs  mul.rs  sub.rs
core/src/sierra/corelib_functions/memory/: dup.rs  mod.rs  rename.rs  store_temp.rs
core/src/sierra/corelib_functions/structs/: construct.rs  deconstruct.rs  mod.rs
core/src/sierra/libfunc/: mod.rs  processor.rs
core/src/sierra/libfunc/math/: add.rs  constants.rs  sub.rs
core/src/sierra/process/: blocks.rs  constants.rs  corelib.rs  dataflow.rs  debug.rs  funcs.rs  jumps.rs  mod.rs  statements.rs  types.rs
core/src/sierra/runtime/jump/: felt_is_zero.rs
core/src/sierra/runtime/printf/: mod.rs
core/src/sierra/statements_processing/: mod.rs
core/src/sierra/statements_processing/jump/: enum_match.rs  felt_is_zero.rs  jump.rs  jumps.rs  mod.rs
core/src/sierra/statements_processing/print/: mod.rs  print_felt_representation.rs
core/src/sierra/statements_processing/printf/: mod.rs
core/src/sierra/types/: array.rs  felt.rs  mod.rs  non_zero.rs  range_check.rs  sierra_box.rs  sierra_enum.rs  sierra_struct.rs  sierra_u32.rs  snapshot.rs
core/src/sierra/types/builtins/: mod.rs  range_check.rs
core/src/sierra/types/math/: mod.rs
core/src/types/: felt.rs
core/tests/: comparison.rs  proptests.proptest-regressions  proptests.rs  sierra_to_llvm.rs
core/tests/comparison/: .gitignore  felt_addition.cairo  felt_addition.sierra  felt_multiplication.cairo  felt_multiplication.sierra  felt_negation.cairo  felt_negation.sierra  felt_subtraction.cairo  felt_subtraction.sierra  fib_felt_is_zero.sierra  multiple_return.sierra  void_func.sierra
core/tests/templates/: addition.sierra  binary_op.sierra  mul.sierra  operation.sierra  substraction.sierra
core/tests/test_data/cairo/: addition.cairo  fib.cairo  fib0.cairo  fib_bench.cairo  fib_box_main.cairo  fib_main.cairo  struct_construct.cairo
core/tests/test_data/llvm/: addition.ll  division.ll  fib.ll  fib_bench.ll  fib_box.ll  fib_box_main.ll  fib_main.ll  struct_construct.ll
core/tests/test_data/llvm/bc/: addition.bc  fib.bc  fib_bench.bc  fib_box.bc  fib_box_main.bc  fib_main.bc
core/tests/test_data/llvm/ll/: addition.ll  fib.ll  fib_bench.ll  fib_box.ll  fib_box_main.ll  fib_main.ll
core/tests/test_data/sierra/: addition.sierra  division.sierra  fib.sierra  fib_bench.sierra  fib_box.sierra  fib_box_main.sierra  fib_main.sierra  fib_main2.sierra  struct_construct.sierra
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/: .env.example  README.md  program.bc  program.ll  program.sierra
examples/sierra/: add.cairo  add.sierra  test.cairo  test.ll  test.sierra
fuzzing/: Cargo.toml  check_crash.sh
fuzzing/src/: lib.rs  main.rs
fuzzing/src/math/: mod.rs
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
resources/bench/: add.json  test  test.s
shenlong/: all.html  index.html  sidebar-items.js
shenlong/cli/: enum.Commands.html  enum.SierraSubCommands.html  index.html  struct.Command.html  struct.SierraCommands.html
shenlong/core/: index.html
shenlong/core/sierra/: index.html  sidebar-items.js
shenlong/emoji/: index.html  static.CHECK_MARK_BUTTON.html  static.SPARKLE.html
shenlong_cli/: all.html  index.html  sidebar-items.js
shenlong_cli/cli/: enum.Commands.html  enum.SierraSubCommands.html  index.html  sidebar-items.js  struct.Command.html  struct.SierraCommands.html
shenlong_cli/emoji/: index.html  sidebar-items.js  static.CHECK_MARK_BUTTON.html  static.SPARKLE.html
shenlong_compiler/: all.html  index.html  sidebar-items.js
shenlong_compiler/core/: index.html  sidebar-items.js
shenlong_compiler/core/sierra/: index.html
shenlong_core/: all.html  index.html
shenlong_core/sierra/: index.html  sidebar-items.js
shenlong_core/sierra/errors/: constant.DEBUG_NAME_EXPECTED.html  enum.CompilerError.html  index.html  type.CompilerResult.html
shenlong_core/sierra/libfunc/: index.html  struct.Func.html  struct.LlvmMathAdd.html  struct.LlvmMathConst.html  struct.LlvmMathSub.html  trait.LibfuncProcessor.html  trait.LlvmBodyProcessor.html
shenlong_core/sierra/llvm_compiler/: enum.CompilationState.html  enum.CompilerErr.html  index.html  sidebar-items.js  struct.Compiler.html  struct.DebugCompiler.html  (+3 more)
src/: lib.rs
src/shenlong/: cli.rs.html  emoji.rs.html  lib.rs.html
src/shenlong_cli/: cli.rs.html  emoji.rs.html  lib.rs.html
src/shenlong_compiler/: lib.rs.html
src/shenlong_core/: lib.rs.html
(+85 files in other folders)
