[package]
name = "shenlong"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "cli"]

[workspace.package]
edition = "2021"
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>", "Lucas Levy <@lucaslvy>"]
description = "Shenlong is a blazingly fast ⚡ tool to generate LLVM IR from Cairo, written in Rust 🦀"
homepage = "https://github.com/keep-starknet-strange/shenlong"
repository = "https://github.com/keep-starknet-strange/shenlong"
readme = "./README.md"
license = "MIT"


[dependencies]
cairo-vm = "0.1.1"
shenlong_core = { path = "./core" }

[dev-dependencies]
criterion = "0.4.0"
tempdir = "0.3.7"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[[bench]]
name = "llvm_execution"
harness = false
