[package]
name = "shenlong"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "cli"]

[workspace.package]
edition = "2021"
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>", "Lucas Levy <@lucaslvy>"]
description = "Shenlong is a blazingly fast ⚡ tool to generate LLVM IR from Cairo, written in Rust 🦀"
homepage = "https://github.com/keep-starknet-strange/shenlong"
repository = "https://github.com/keep-starknet-strange/shenlong"
readme = "./README.md"
license = "MIT"

[dependencies]
shenlong_core = { path = "./core" }

[dev-dependencies]
criterion = "0.4.0"
tempdir = "0.3.7"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs/", branch = "main" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm15-0",
] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-for-all",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[[bench]]
name = "execution"
harness = false
