[package]
name = "shenlong_cli"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
shenlong_core = { path = "../core" }
eyre = "0.6.8"
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"