[package]
name = "shenlong_cli"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
shenlong_core = { path = "../core" }
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
owo-colors = "3.5.0"
indicatif = "0.17.3"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
