[package]
name = "shenlong"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
shenlong-core = { path = "../core" }
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
owo-colors = "3.5.0"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
