[package]
name = "shenlong_core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm10-0",
] }
sierra = { git = "https://github.com/starkware-libs/cairo" }
eyre = "0.6.8"
log = "0.4.17"
env_logger = "0.10.0"
tempdir = "0.3.7"