[package]
name = "shenlong-core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm15-0",
] }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", branch = "main" }
env_logger = "0.10.0"
tempdir = "0.3.7"
num-bigint = "0.4"
thiserror = "1.0.38"
test-case = "3.0.0"
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
proptest = "1.1.0"
tinytemplate = "1.2.1"
serde = { version = "1.0.152", features = ["derive"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
